[tool.poetry]
name = "odnu-graph-aws"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
uvicorn = "0.23.2"
langserve = "0.3.0"
pydantic = "2.9.2"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
attrs = "24.2.0"
boto3 = "1.35.43"
botocore = "1.35.54"
build = "1.2.2.post1"
cachecontrol = "0.14.0"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.4.0"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
crashtest = "0.4.1"
dataclasses-json = "0.6.7"
distlib = "0.3.9"
dulwich = "0.21.7"
fastapi = "0.115.4"
fastjsonschema = "2.20.0"
filelock = "3.16.1"
frozenlist = "1.5.0"
gitdb = "4.0.11"
gitpython = "3.1.43"
greenlet = "3.1.1"
gritql = "0.1.5"
h11 = "0.14.0"
httpcore = "1.0.6"
httpx = "0.27.2"
httpx-sse = "0.4.0"
idna = "3.10"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jmespath = "1.0.1"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
keyring = "24.3.1"
langchain = "0.3.3"
langchain-aws = "0.2.2"
langchain-cli = "0.0.31"
langchain-community = "0.3.2"
langchain-core = "0.3.15"
langchain-pinecone = "0.2.0"
langchain-text-splitters = "0.3.0"
langgraph = "0.2.38"
langgraph-checkpoint = "2.0.2"
langgraph-sdk = "0.1.35"
langsmith = "0.1.139"
markdown-it-py = "3.0.0"
marshmallow = "3.23.1"
mdurl = "0.1.2"
more-itertools = "10.5.0"
msgpack = "1.1.0"
multidict = "6.1.0"
mypy-extensions = "1.0.0"
numpy = "1.26.4"
orjson = "3.10.11"
packaging = "24.1"
pexpect = "4.9.0"
pinecone-client = "5.0.1"
pinecone-plugin-inference = "1.1.0"
pinecone-plugin-interface = "0.0.7"
pkginfo = "1.11.2"
platformdirs = "4.3.6"
poetry = "1.8.4"
poetry-core = "1.9.1"
poetry-plugin-export = "1.8.0"
propcache = "0.2.0"
ptyprocess = "0.7.0"
pycparser = "2.22"
pydantic-settings = "2.6.1"
pydantic-core = "2.23.4"
pygments = "2.18.0"
pyproject-toml = "0.0.10"
pyproject-hooks = "1.2.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pyyaml = "6.0.2"
rapidfuzz = "3.10.1"
referencing = "0.35.1"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rich = "13.9.4"
rpds-py = "0.20.1"
s3transfer = "0.10.3"
setuptools = "75.3.0"
shellingham = "1.5.4"
six = "1.16.0"
smmap = "5.0.1"
sniffio = "1.3.1"
sqlalchemy = "2.0.36"
sse-starlette = "<2.0.0"
starlette = "0.41.2"
tenacity = "8.5.0"
toml = "0.10.2"
tomlkit = "0.12.5"
tqdm = "4.66.6"
trove-classifiers = "2024.10.21.16"
typer = "0.9.4"
typing-inspect = "0.9.0"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
virtualenv = "20.27.1"
wheel = "0.44.0"
xattr = "1.1.0"
yarl = "1.17.1"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
